Fix casing in CSS

--- a/shared/fonts/imports/Iosevka/Iosevka.css
+++ b/shared/fonts/imports/Iosevka/Iosevka.css
@@ -5,7 +5,7 @@
 	font-weight: 100;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-Thin.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-Thin.woff2') format('woff2');
 }
 
 @font-face {
@@ -14,7 +14,7 @@
 	font-weight: 100;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-ExtendedThin.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedThin.woff2') format('woff2');
 }
 
 @font-face {
@@ -23,7 +23,7 @@
 	font-weight: 100;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-ThinOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ThinOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -31,7 +31,7 @@
 	font-display: swap;
 	font-weight: 100;
 	font-stretch: normal;
-	src: url('WOFF2/Iosevka-ThinOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ThinOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -40,7 +40,7 @@
 	font-weight: 100;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-ExtendedThinOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedThinOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -48,7 +48,7 @@
 	font-display: swap;
 	font-weight: 100;
 	font-stretch: expanded;
-	src: url('WOFF2/Iosevka-ExtendedThinOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedThinOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -57,7 +57,7 @@
 	font-weight: 100;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-ThinItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ThinItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -66,7 +66,7 @@
 	font-weight: 100;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-ExtendedThinItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedThinItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -75,7 +75,7 @@
 	font-weight: 200;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-ExtraLight.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtraLight.woff2') format('woff2');
 }
 
 @font-face {
@@ -84,7 +84,7 @@
 	font-weight: 200;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-ExtendedExtraLight.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedExtraLight.woff2') format('woff2');
 }
 
 @font-face {
@@ -93,7 +93,7 @@
 	font-weight: 200;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-ExtraLightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtraLightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -101,7 +101,7 @@
 	font-display: swap;
 	font-weight: 200;
 	font-stretch: normal;
-	src: url('WOFF2/Iosevka-ExtraLightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtraLightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -110,7 +110,7 @@
 	font-weight: 200;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-ExtendedExtraLightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedExtraLightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -118,7 +118,7 @@
 	font-display: swap;
 	font-weight: 200;
 	font-stretch: expanded;
-	src: url('WOFF2/Iosevka-ExtendedExtraLightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedExtraLightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -127,7 +127,7 @@
 	font-weight: 200;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-ExtraLightItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtraLightItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -136,7 +136,7 @@
 	font-weight: 200;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-ExtendedExtraLightItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedExtraLightItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -145,7 +145,7 @@
 	font-weight: 300;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-Light.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-Light.woff2') format('woff2');
 }
 
 @font-face {
@@ -154,7 +154,7 @@
 	font-weight: 300;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-ExtendedLight.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedLight.woff2') format('woff2');
 }
 
 @font-face {
@@ -163,7 +163,7 @@
 	font-weight: 300;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-LightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-LightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -171,7 +171,7 @@
 	font-display: swap;
 	font-weight: 300;
 	font-stretch: normal;
-	src: url('WOFF2/Iosevka-LightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-LightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -180,7 +180,7 @@
 	font-weight: 300;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-ExtendedLightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedLightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -188,7 +188,7 @@
 	font-display: swap;
 	font-weight: 300;
 	font-stretch: expanded;
-	src: url('WOFF2/Iosevka-ExtendedLightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedLightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -197,7 +197,7 @@
 	font-weight: 300;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-LightItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-LightItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -206,7 +206,7 @@
 	font-weight: 300;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-ExtendedLightItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedLightItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -215,7 +215,7 @@
 	font-weight: 400;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-Regular.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-Regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -224,7 +224,7 @@
 	font-weight: 400;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-Extended.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-Extended.woff2') format('woff2');
 }
 
 @font-face {
@@ -233,7 +233,7 @@
 	font-weight: 400;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-Oblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-Oblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -241,7 +241,7 @@
 	font-display: swap;
 	font-weight: 400;
 	font-stretch: normal;
-	src: url('WOFF2/Iosevka-Oblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-Oblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -250,7 +250,7 @@
 	font-weight: 400;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-ExtendedOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -258,7 +258,7 @@
 	font-display: swap;
 	font-weight: 400;
 	font-stretch: expanded;
-	src: url('WOFF2/Iosevka-ExtendedOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -267,7 +267,7 @@
 	font-weight: 400;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-Italic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-Italic.woff2') format('woff2');
 }
 
 @font-face {
@@ -276,7 +276,7 @@
 	font-weight: 400;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-ExtendedItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -285,7 +285,7 @@
 	font-weight: 500;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-Medium.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-Medium.woff2') format('woff2');
 }
 
 @font-face {
@@ -294,7 +294,7 @@
 	font-weight: 500;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-ExtendedMedium.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedMedium.woff2') format('woff2');
 }
 
 @font-face {
@@ -303,7 +303,7 @@
 	font-weight: 500;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-MediumOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-MediumOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -311,7 +311,7 @@
 	font-display: swap;
 	font-weight: 500;
 	font-stretch: normal;
-	src: url('WOFF2/Iosevka-MediumOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-MediumOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -320,7 +320,7 @@
 	font-weight: 500;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-ExtendedMediumOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedMediumOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -328,7 +328,7 @@
 	font-display: swap;
 	font-weight: 500;
 	font-stretch: expanded;
-	src: url('WOFF2/Iosevka-ExtendedMediumOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedMediumOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -337,7 +337,7 @@
 	font-weight: 500;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-MediumItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-MediumItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -346,7 +346,7 @@
 	font-weight: 500;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-ExtendedMediumItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedMediumItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -355,7 +355,7 @@
 	font-weight: 600;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-SemiBold.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-SemiBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -364,7 +364,7 @@
 	font-weight: 600;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-ExtendedSemiBold.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedSemiBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -373,7 +373,7 @@
 	font-weight: 600;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-SemiBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-SemiBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -381,7 +381,7 @@
 	font-display: swap;
 	font-weight: 600;
 	font-stretch: normal;
-	src: url('WOFF2/Iosevka-SemiBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-SemiBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -390,7 +390,7 @@
 	font-weight: 600;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-ExtendedSemiBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedSemiBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -398,7 +398,7 @@
 	font-display: swap;
 	font-weight: 600;
 	font-stretch: expanded;
-	src: url('WOFF2/Iosevka-ExtendedSemiBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedSemiBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -407,7 +407,7 @@
 	font-weight: 600;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-SemiBoldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-SemiBoldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -416,7 +416,7 @@
 	font-weight: 600;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-ExtendedSemiBoldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedSemiBoldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -425,7 +425,7 @@
 	font-weight: 700;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-Bold.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-Bold.woff2') format('woff2');
 }
 
 @font-face {
@@ -434,7 +434,7 @@
 	font-weight: 700;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-ExtendedBold.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -443,7 +443,7 @@
 	font-weight: 700;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-BoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-BoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -451,7 +451,7 @@
 	font-display: swap;
 	font-weight: 700;
 	font-stretch: normal;
-	src: url('WOFF2/Iosevka-BoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-BoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -460,7 +460,7 @@
 	font-weight: 700;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-ExtendedBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -468,7 +468,7 @@
 	font-display: swap;
 	font-weight: 700;
 	font-stretch: expanded;
-	src: url('WOFF2/Iosevka-ExtendedBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -477,7 +477,7 @@
 	font-weight: 700;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-BoldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-BoldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -486,7 +486,7 @@
 	font-weight: 700;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-ExtendedBoldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedBoldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -495,7 +495,7 @@
 	font-weight: 800;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-ExtraBold.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtraBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -504,7 +504,7 @@
 	font-weight: 800;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-ExtendedExtraBold.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedExtraBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -513,7 +513,7 @@
 	font-weight: 800;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-ExtraBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtraBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -521,7 +521,7 @@
 	font-display: swap;
 	font-weight: 800;
 	font-stretch: normal;
-	src: url('WOFF2/Iosevka-ExtraBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtraBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -530,7 +530,7 @@
 	font-weight: 800;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-ExtendedExtraBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedExtraBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -538,7 +538,7 @@
 	font-display: swap;
 	font-weight: 800;
 	font-stretch: expanded;
-	src: url('WOFF2/Iosevka-ExtendedExtraBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedExtraBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -547,7 +547,7 @@
 	font-weight: 800;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-ExtraBoldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtraBoldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -556,7 +556,7 @@
 	font-weight: 800;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-ExtendedExtraBoldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedExtraBoldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -565,7 +565,7 @@
 	font-weight: 900;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-Heavy.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-Heavy.woff2') format('woff2');
 }
 
 @font-face {
@@ -574,7 +574,7 @@
 	font-weight: 900;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/Iosevka-ExtendedHeavy.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedHeavy.woff2') format('woff2');
 }
 
 @font-face {
@@ -583,7 +583,7 @@
 	font-weight: 900;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-HeavyOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-HeavyOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -591,7 +591,7 @@
 	font-display: swap;
 	font-weight: 900;
 	font-stretch: normal;
-	src: url('WOFF2/Iosevka-HeavyOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-HeavyOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -600,7 +600,7 @@
 	font-weight: 900;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/Iosevka-ExtendedHeavyOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedHeavyOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -608,7 +608,7 @@
 	font-display: swap;
 	font-weight: 900;
 	font-stretch: expanded;
-	src: url('WOFF2/Iosevka-ExtendedHeavyOblique.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedHeavyOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -617,7 +617,7 @@
 	font-weight: 900;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-HeavyItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-HeavyItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -626,5 +626,5 @@
 	font-weight: 900;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/Iosevka-ExtendedHeavyItalic.WOFF2') format('woff2');
+	src: url('WOFF2/Iosevka-ExtendedHeavyItalic.woff2') format('woff2');
 }
