--- a/shared/fonts/imports/IosevkaAile/IosevkaAile.css
+++ b/shared/fonts/imports/IosevkaAile/IosevkaAile.css
@@ -5,7 +5,7 @@
 	font-weight: 100;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaAile-Thin.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-Thin.woff2') format('woff2');
 }
 
 @font-face {
@@ -14,7 +14,7 @@
 	font-weight: 100;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaAile-ThinOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-ThinOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -22,7 +22,7 @@
 	font-display: swap;
 	font-weight: 100;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaAile-ThinOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-ThinOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -31,7 +31,7 @@
 	font-weight: 100;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaAile-ThinItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-ThinItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -40,7 +40,7 @@
 	font-weight: 200;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaAile-ExtraLight.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-ExtraLight.woff2') format('woff2');
 }
 
 @font-face {
@@ -49,7 +49,7 @@
 	font-weight: 200;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaAile-ExtraLightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-ExtraLightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -57,7 +57,7 @@
 	font-display: swap;
 	font-weight: 200;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaAile-ExtraLightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-ExtraLightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -66,7 +66,7 @@
 	font-weight: 200;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaAile-ExtraLightItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-ExtraLightItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -75,7 +75,7 @@
 	font-weight: 300;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaAile-Light.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-Light.woff2') format('woff2');
 }
 
 @font-face {
@@ -84,7 +84,7 @@
 	font-weight: 300;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaAile-LightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-LightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -92,7 +92,7 @@
 	font-display: swap;
 	font-weight: 300;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaAile-LightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-LightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -101,7 +101,7 @@
 	font-weight: 300;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaAile-LightItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-LightItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -110,7 +110,7 @@
 	font-weight: 400;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaAile-Regular.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-Regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -119,7 +119,7 @@
 	font-weight: 400;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaAile-Oblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-Oblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -127,7 +127,7 @@
 	font-display: swap;
 	font-weight: 400;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaAile-Oblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-Oblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -136,7 +136,7 @@
 	font-weight: 400;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaAile-Italic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-Italic.woff2') format('woff2');
 }
 
 @font-face {
@@ -145,7 +145,7 @@
 	font-weight: 500;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaAile-Medium.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-Medium.woff2') format('woff2');
 }
 
 @font-face {
@@ -154,7 +154,7 @@
 	font-weight: 500;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaAile-MediumOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-MediumOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -162,7 +162,7 @@
 	font-display: swap;
 	font-weight: 500;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaAile-MediumOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-MediumOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -171,7 +171,7 @@
 	font-weight: 500;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaAile-MediumItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-MediumItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -180,7 +180,7 @@
 	font-weight: 600;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaAile-SemiBold.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-SemiBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -189,7 +189,7 @@
 	font-weight: 600;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaAile-SemiBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-SemiBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -197,7 +197,7 @@
 	font-display: swap;
 	font-weight: 600;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaAile-SemiBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-SemiBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -206,7 +206,7 @@
 	font-weight: 600;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaAile-SemiBoldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-SemiBoldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -215,7 +215,7 @@
 	font-weight: 700;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaAile-Bold.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-Bold.woff2') format('woff2');
 }
 
 @font-face {
@@ -224,7 +224,7 @@
 	font-weight: 700;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaAile-BoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-BoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -232,7 +232,7 @@
 	font-display: swap;
 	font-weight: 700;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaAile-BoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-BoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -241,7 +241,7 @@
 	font-weight: 700;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaAile-BoldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-BoldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -250,7 +250,7 @@
 	font-weight: 800;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaAile-ExtraBold.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-ExtraBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -259,7 +259,7 @@
 	font-weight: 800;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaAile-ExtraBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-ExtraBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -267,7 +267,7 @@
 	font-display: swap;
 	font-weight: 800;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaAile-ExtraBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-ExtraBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -276,7 +276,7 @@
 	font-weight: 800;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaAile-ExtraBoldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-ExtraBoldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -285,7 +285,7 @@
 	font-weight: 900;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaAile-Heavy.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-Heavy.woff2') format('woff2');
 }
 
 @font-face {
@@ -294,7 +294,7 @@
 	font-weight: 900;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaAile-HeavyOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-HeavyOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -302,7 +302,7 @@
 	font-display: swap;
 	font-weight: 900;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaAile-HeavyOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-HeavyOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -311,5 +311,5 @@
 	font-weight: 900;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaAile-HeavyItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaAile-HeavyItalic.woff2') format('woff2');
 }
