--- a/shared/fonts/imports/IosevkaQpe/IosevkaQpe.css
+++ b/shared/fonts/imports/IosevkaQpe/IosevkaQpe.css
@@ -5,7 +5,7 @@
 	font-weight: 400;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaQpe-regular.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpe-regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -14,7 +14,7 @@
 	font-weight: 400;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/IosevkaQpe-Extendedregular.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpe-Extendedregular.woff2') format('woff2');
 }
 
 @font-face {
@@ -23,7 +23,7 @@
 	font-weight: 400;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaQpe-regularOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpe-regularOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -31,7 +31,7 @@
 	font-display: swap;
 	font-weight: 400;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaQpe-regularOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpe-regularOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -40,7 +40,7 @@
 	font-weight: 400;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaQpe-ExtendedregularOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpe-ExtendedregularOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -48,7 +48,7 @@
 	font-display: swap;
 	font-weight: 400;
 	font-stretch: expanded;
-	src: url('WOFF2/IosevkaQpe-ExtendedregularOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpe-ExtendedregularOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -57,7 +57,7 @@
 	font-weight: 400;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaQpe-regularItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpe-regularItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -66,7 +66,7 @@
 	font-weight: 400;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/IosevkaQpe-ExtendedregularItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpe-ExtendedregularItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -75,7 +75,7 @@
 	font-weight: 700;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaQpe-bold.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpe-bold.woff2') format('woff2');
 }
 
 @font-face {
@@ -84,7 +84,7 @@
 	font-weight: 700;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/IosevkaQpe-Extendedbold.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpe-Extendedbold.woff2') format('woff2');
 }
 
 @font-face {
@@ -93,7 +93,7 @@
 	font-weight: 700;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaQpe-boldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpe-boldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -101,7 +101,7 @@
 	font-display: swap;
 	font-weight: 700;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaQpe-boldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpe-boldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -110,7 +110,7 @@
 	font-weight: 700;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaQpe-ExtendedboldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpe-ExtendedboldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -118,7 +118,7 @@
 	font-display: swap;
 	font-weight: 700;
 	font-stretch: expanded;
-	src: url('WOFF2/IosevkaQpe-ExtendedboldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpe-ExtendedboldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -127,7 +127,7 @@
 	font-weight: 700;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaQpe-boldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpe-boldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -136,5 +136,5 @@
 	font-weight: 700;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/IosevkaQpe-ExtendedboldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpe-ExtendedboldItalic.woff2') format('woff2');
 }
