--- a/shared/fonts/imports/IosevkaQpeSlab/IosevkaQpeSlab.css
+++ b/shared/fonts/imports/IosevkaQpeSlab/IosevkaQpeSlab.css
@@ -5,7 +5,7 @@
 	font-weight: 400;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaQpeSlab-regular.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpeSlab-regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -14,7 +14,7 @@
 	font-weight: 400;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/IosevkaQpeSlab-Extendedregular.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpeSlab-Extendedregular.woff2') format('woff2');
 }
 
 @font-face {
@@ -23,7 +23,7 @@
 	font-weight: 400;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaQpeSlab-regularOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpeSlab-regularOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -31,7 +31,7 @@
 	font-display: swap;
 	font-weight: 400;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaQpeSlab-regularOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpeSlab-regularOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -40,7 +40,7 @@
 	font-weight: 400;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaQpeSlab-ExtendedregularOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpeSlab-ExtendedregularOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -48,7 +48,7 @@
 	font-display: swap;
 	font-weight: 400;
 	font-stretch: expanded;
-	src: url('WOFF2/IosevkaQpeSlab-ExtendedregularOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpeSlab-ExtendedregularOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -57,7 +57,7 @@
 	font-weight: 400;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaQpeSlab-regularItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpeSlab-regularItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -66,7 +66,7 @@
 	font-weight: 400;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/IosevkaQpeSlab-ExtendedregularItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpeSlab-ExtendedregularItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -75,7 +75,7 @@
 	font-weight: 700;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaQpeSlab-bold.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpeSlab-bold.woff2') format('woff2');
 }
 
 @font-face {
@@ -84,7 +84,7 @@
 	font-weight: 700;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/IosevkaQpeSlab-Extendedbold.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpeSlab-Extendedbold.woff2') format('woff2');
 }
 
 @font-face {
@@ -93,7 +93,7 @@
 	font-weight: 700;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaQpeSlab-boldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpeSlab-boldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -101,7 +101,7 @@
 	font-display: swap;
 	font-weight: 700;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaQpeSlab-boldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpeSlab-boldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -110,7 +110,7 @@
 	font-weight: 700;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaQpeSlab-ExtendedboldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpeSlab-ExtendedboldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -118,7 +118,7 @@
 	font-display: swap;
 	font-weight: 700;
 	font-stretch: expanded;
-	src: url('WOFF2/IosevkaQpeSlab-ExtendedboldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpeSlab-ExtendedboldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -127,7 +127,7 @@
 	font-weight: 700;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaQpeSlab-boldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpeSlab-boldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -136,5 +136,5 @@
 	font-weight: 700;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/IosevkaQpeSlab-ExtendedboldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaQpeSlab-ExtendedboldItalic.woff2') format('woff2');
 }
