--- a/shared/fonts/imports/IosevkaSlab/IosevkaSlab.css
+++ b/shared/fonts/imports/IosevkaSlab/IosevkaSlab.css
@@ -5,7 +5,7 @@
 	font-weight: 100;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-Thin.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-Thin.woff2') format('woff2');
 }
 
 @font-face {
@@ -14,7 +14,7 @@
 	font-weight: 100;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-ExtendedThin.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedThin.woff2') format('woff2');
 }
 
 @font-face {
@@ -23,7 +23,7 @@
 	font-weight: 100;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-ThinOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ThinOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -31,7 +31,7 @@
 	font-display: swap;
 	font-weight: 100;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaSlab-ThinOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ThinOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -40,7 +40,7 @@
 	font-weight: 100;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-ExtendedThinOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedThinOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -48,7 +48,7 @@
 	font-display: swap;
 	font-weight: 100;
 	font-stretch: expanded;
-	src: url('WOFF2/IosevkaSlab-ExtendedThinOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedThinOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -57,7 +57,7 @@
 	font-weight: 100;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-ThinItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ThinItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -66,7 +66,7 @@
 	font-weight: 100;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-ExtendedThinItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedThinItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -75,7 +75,7 @@
 	font-weight: 200;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-ExtraLight.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtraLight.woff2') format('woff2');
 }
 
 @font-face {
@@ -84,7 +84,7 @@
 	font-weight: 200;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-ExtendedExtraLight.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedExtraLight.woff2') format('woff2');
 }
 
 @font-face {
@@ -93,7 +93,7 @@
 	font-weight: 200;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-ExtraLightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtraLightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -101,7 +101,7 @@
 	font-display: swap;
 	font-weight: 200;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaSlab-ExtraLightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtraLightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -110,7 +110,7 @@
 	font-weight: 200;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-ExtendedExtraLightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedExtraLightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -118,7 +118,7 @@
 	font-display: swap;
 	font-weight: 200;
 	font-stretch: expanded;
-	src: url('WOFF2/IosevkaSlab-ExtendedExtraLightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedExtraLightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -127,7 +127,7 @@
 	font-weight: 200;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-ExtraLightItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtraLightItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -136,7 +136,7 @@
 	font-weight: 200;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-ExtendedExtraLightItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedExtraLightItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -145,7 +145,7 @@
 	font-weight: 300;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-Light.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-Light.woff2') format('woff2');
 }
 
 @font-face {
@@ -154,7 +154,7 @@
 	font-weight: 300;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-ExtendedLight.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedLight.woff2') format('woff2');
 }
 
 @font-face {
@@ -163,7 +163,7 @@
 	font-weight: 300;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-LightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-LightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -171,7 +171,7 @@
 	font-display: swap;
 	font-weight: 300;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaSlab-LightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-LightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -180,7 +180,7 @@
 	font-weight: 300;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-ExtendedLightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedLightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -188,7 +188,7 @@
 	font-display: swap;
 	font-weight: 300;
 	font-stretch: expanded;
-	src: url('WOFF2/IosevkaSlab-ExtendedLightOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedLightOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -197,7 +197,7 @@
 	font-weight: 300;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-LightItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-LightItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -206,7 +206,7 @@
 	font-weight: 300;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-ExtendedLightItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedLightItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -215,7 +215,7 @@
 	font-weight: 400;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-Regular.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-Regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -224,7 +224,7 @@
 	font-weight: 400;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-Extended.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-Extended.woff2') format('woff2');
 }
 
 @font-face {
@@ -233,7 +233,7 @@
 	font-weight: 400;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-Oblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-Oblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -241,7 +241,7 @@
 	font-display: swap;
 	font-weight: 400;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaSlab-Oblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-Oblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -250,7 +250,7 @@
 	font-weight: 400;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-ExtendedOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -258,7 +258,7 @@
 	font-display: swap;
 	font-weight: 400;
 	font-stretch: expanded;
-	src: url('WOFF2/IosevkaSlab-ExtendedOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -267,7 +267,7 @@
 	font-weight: 400;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-Italic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-Italic.woff2') format('woff2');
 }
 
 @font-face {
@@ -276,7 +276,7 @@
 	font-weight: 400;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-ExtendedItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -285,7 +285,7 @@
 	font-weight: 500;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-Medium.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-Medium.woff2') format('woff2');
 }
 
 @font-face {
@@ -294,7 +294,7 @@
 	font-weight: 500;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-ExtendedMedium.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedMedium.woff2') format('woff2');
 }
 
 @font-face {
@@ -303,7 +303,7 @@
 	font-weight: 500;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-MediumOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-MediumOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -311,7 +311,7 @@
 	font-display: swap;
 	font-weight: 500;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaSlab-MediumOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-MediumOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -320,7 +320,7 @@
 	font-weight: 500;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-ExtendedMediumOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedMediumOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -328,7 +328,7 @@
 	font-display: swap;
 	font-weight: 500;
 	font-stretch: expanded;
-	src: url('WOFF2/IosevkaSlab-ExtendedMediumOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedMediumOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -337,7 +337,7 @@
 	font-weight: 500;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-MediumItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-MediumItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -346,7 +346,7 @@
 	font-weight: 500;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-ExtendedMediumItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedMediumItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -355,7 +355,7 @@
 	font-weight: 600;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-SemiBold.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-SemiBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -364,7 +364,7 @@
 	font-weight: 600;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-ExtendedSemiBold.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedSemiBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -373,7 +373,7 @@
 	font-weight: 600;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-SemiBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-SemiBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -381,7 +381,7 @@
 	font-display: swap;
 	font-weight: 600;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaSlab-SemiBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-SemiBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -390,7 +390,7 @@
 	font-weight: 600;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-ExtendedSemiBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedSemiBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -398,7 +398,7 @@
 	font-display: swap;
 	font-weight: 600;
 	font-stretch: expanded;
-	src: url('WOFF2/IosevkaSlab-ExtendedSemiBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedSemiBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -407,7 +407,7 @@
 	font-weight: 600;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-SemiBoldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-SemiBoldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -416,7 +416,7 @@
 	font-weight: 600;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-ExtendedSemiBoldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedSemiBoldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -425,7 +425,7 @@
 	font-weight: 700;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-Bold.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-Bold.woff2') format('woff2');
 }
 
 @font-face {
@@ -434,7 +434,7 @@
 	font-weight: 700;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-ExtendedBold.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -443,7 +443,7 @@
 	font-weight: 700;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-BoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-BoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -451,7 +451,7 @@
 	font-display: swap;
 	font-weight: 700;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaSlab-BoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-BoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -460,7 +460,7 @@
 	font-weight: 700;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-ExtendedBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -468,7 +468,7 @@
 	font-display: swap;
 	font-weight: 700;
 	font-stretch: expanded;
-	src: url('WOFF2/IosevkaSlab-ExtendedBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -477,7 +477,7 @@
 	font-weight: 700;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-BoldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-BoldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -486,7 +486,7 @@
 	font-weight: 700;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-ExtendedBoldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedBoldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -495,7 +495,7 @@
 	font-weight: 800;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-ExtraBold.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtraBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -504,7 +504,7 @@
 	font-weight: 800;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-ExtendedExtraBold.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedExtraBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -513,7 +513,7 @@
 	font-weight: 800;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-ExtraBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtraBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -521,7 +521,7 @@
 	font-display: swap;
 	font-weight: 800;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaSlab-ExtraBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtraBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -530,7 +530,7 @@
 	font-weight: 800;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-ExtendedExtraBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedExtraBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -538,7 +538,7 @@
 	font-display: swap;
 	font-weight: 800;
 	font-stretch: expanded;
-	src: url('WOFF2/IosevkaSlab-ExtendedExtraBoldOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedExtraBoldOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -547,7 +547,7 @@
 	font-weight: 800;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-ExtraBoldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtraBoldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -556,7 +556,7 @@
 	font-weight: 800;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-ExtendedExtraBoldItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedExtraBoldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -565,7 +565,7 @@
 	font-weight: 900;
 	font-stretch: normal;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-Heavy.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-Heavy.woff2') format('woff2');
 }
 
 @font-face {
@@ -574,7 +574,7 @@
 	font-weight: 900;
 	font-stretch: expanded;
 	font-style: normal;
-	src: url('WOFF2/IosevkaSlab-ExtendedHeavy.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedHeavy.woff2') format('woff2');
 }
 
 @font-face {
@@ -583,7 +583,7 @@
 	font-weight: 900;
 	font-stretch: normal;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-HeavyOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-HeavyOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -591,7 +591,7 @@
 	font-display: swap;
 	font-weight: 900;
 	font-stretch: normal;
-	src: url('WOFF2/IosevkaSlab-HeavyOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-HeavyOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -600,7 +600,7 @@
 	font-weight: 900;
 	font-stretch: expanded;
 	font-style: oblique;
-	src: url('WOFF2/IosevkaSlab-ExtendedHeavyOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedHeavyOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -608,7 +608,7 @@
 	font-display: swap;
 	font-weight: 900;
 	font-stretch: expanded;
-	src: url('WOFF2/IosevkaSlab-ExtendedHeavyOblique.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedHeavyOblique.woff2') format('woff2');
 }
 
 @font-face {
@@ -617,7 +617,7 @@
 	font-weight: 900;
 	font-stretch: normal;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-HeavyItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-HeavyItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -626,5 +626,5 @@
 	font-weight: 900;
 	font-stretch: expanded;
 	font-style: italic;
-	src: url('WOFF2/IosevkaSlab-ExtendedHeavyItalic.WOFF2') format('woff2');
+	src: url('WOFF2/IosevkaSlab-ExtendedHeavyItalic.woff2') format('woff2');
 }
